--- a/angular/index.html
+++ b/angular/index.html
@@ -30,6 +30,7 @@
 
     <script src="js/controller/MainController.js"></script>
     <script src="js/controller/ComponentsController.js"></script>
+    <script src="js/controller/picGridController.js"></script>
 
     <meta charset="UTF-8">
     <title>d3 Force Demo</title>
