infinite scroll demo

--- a/angular/index.html
+++ b/angular/index.html
@@ -8,6 +8,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
 
     <script src="lib/colorbrewer.js"></script>
 
