--- a/angular/index.html
+++ b/angular/index.html
@@ -34,7 +34,7 @@
     <script src="js/controller/picGridController.js"></script>
 
     <meta charset="UTF-8">
-    <title>d3 Force Demo</title>
+    <title>The complete Geek&Poke</title>
 </head>
 <body>
 
