--- a/angular/index.html
+++ b/angular/index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="d3Demo" ng-controller="MainController">
+<html lang="en" ng-app="gapall" ng-controller="MainController">
 <head>
     <link rel="stylesheet" type="text/css" href="bower_components/materialize/bin/materialize.css"
           media="screen,projection"/>
 
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/d3/d3.js"></script>
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-
-    <script src="lib/colorbrewer.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngInfiniteScroll/1.2.1/ng-infinite-scroll.min.js"></script>
 
     <script>
         __global = {
-            appName: "d3Demo"
+            appName: "gapall"
         }
     </script>
 
-    <script src="js/app.js"></script>
+    <script src="https://rawgit.com/owidder/gapall/master/angular/js/app.js"></script>
 
-    <script src="js/factory/util.js"></script>
-    <script src="js/factory/mathutil.js"></script>
-    <script src="js/factory/screen.js"></script>
-    <script src="js/factory/neo4j.js"></script>
-    <script src="js/factory/components.js"></script>
-    <script src="js/factory/colorutil.js"></script>
-
-    <script src="js/directive/dependencyForceDirective.js"></script>
-
-    <script src="js/controller/MainController.js"></script>
-    <script src="js/controller/ComponentsController.js"></script>
-    <script src="js/controller/picGridController.js"></script>
+    <script src="https://rawgit.com/owidder/gapall/master/angular/js/controller/MainController.js"></script>
+    <script src="https://rawgit.com/owidder/gapall/master/angular/js/controller/picGridController.js"></script>
 
     <meta charset="UTF-8">
     <title>The complete Geek&Poke</title>
