--- a/angular/index-dev.html
+++ b/angular/index-dev.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="d3Demo" ng-controller="MainController">
+<html lang="en" ng-app="gapall" ng-controller="MainController">
 <head>
     <link rel="stylesheet" type="text/css" href="bower_components/materialize/bin/materialize.css"
           media="screen,projection"/>
@@ -10,27 +10,16 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
 
-    <script src="lib/colorbrewer.js"></script>
-
     <script>
         __global = {
-            appName: "d3Demo"
+            appName: "gapall"
         }
     </script>
 
     <script src="js/app.js"></script>
 
-    <script src="js/factory/util.js"></script>
-    <script src="js/factory/mathutil.js"></script>
-    <script src="js/factory/screen.js"></script>
-    <script src="js/factory/neo4j.js"></script>
-    <script src="js/factory/components.js"></script>
-    <script src="js/factory/colorutil.js"></script>
-
-    <script src="js/directive/dependencyForceDirective.js"></script>
-
     <script src="js/controller/MainController.js"></script>
-    <script src="js/controller/ComponentsController.js"></script>
+
     <script src="js/controller/picGridController.js"></script>
 
     <meta charset="UTF-8">
