--- a/angular/index.html
+++ b/angular/index.html
@@ -20,6 +20,7 @@
 
     <script src="https://rawgit.com/owidder/gapall/master/angular/js/controller/MainController.js"></script>
     <script src="https://rawgit.com/owidder/gapall/master/angular/js/controller/picGridController.js"></script>
+    <script src="https://rawgit.com/owidder/gapall/master/angular/js/factory/util.js"></script>
 
     <meta charset="UTF-8">
     <title>The complete Geek&Poke</title>
