--- a/angular/index-dev.html
+++ b/angular/index-dev.html
@@ -19,8 +19,8 @@
     <script src="js/app.js"></script>
 
     <script src="js/controller/MainController.js"></script>
-
     <script src="js/controller/picGridController.js"></script>
+    <script src="js/factory/util.js"></script>
 
     <meta charset="UTF-8">
     <title>The complete Geek&Poke</title>
