--- a/angular/index-dev.html
+++ b/angular/index-dev.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="gapall" ng-controller="MainController">
 <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="bower_components/materialize/bin/materialize.css"
           media="screen,projection"/>
 
