--- a/angular/index-dev.html
+++ b/angular/index-dev.html
@@ -22,6 +22,7 @@
     <script src="js/controller/MainController.js"></script>
     <script src="js/controller/picGridController.js"></script>
     <script src="js/factory/util.js"></script>
+    <script src="js/factory/gapUtil.js"></script>
 
     <meta charset="UTF-8">
     <title>The complete Geek&Poke</title>
