--- a/angular/index-dev.html
+++ b/angular/index-dev.html
@@ -21,6 +21,7 @@
 
     <script src="js/controller/MainController.js"></script>
     <script src="js/controller/picGridController.js"></script>
+    <script src="js/controller/onePicController.js"></script>
     <script src="js/factory/util.js"></script>
     <script src="js/factory/gapImages.js"></script>
 
