--- a/angular/index-dev.html
+++ b/angular/index-dev.html
@@ -20,6 +20,7 @@
     <script src="js/app.js"></script>
 
     <script src="js/controller/MainController.js"></script>
+    <script src="js/directive/cartoonImageDirective.js"></script>
     <script src="js/controller/picGridController.js"></script>
     <script src="js/controller/onePicController.js"></script>
     <script src="js/factory/util.js"></script>
