relative src in index.html

--- a/angular/index.html
+++ b/angular/index.html
@@ -17,11 +17,12 @@
         }
     </script>
 
-    <script src="https://rawgit.com/owidder/gapall/master/angular/js/app.js"></script>
+    <script src="js/app.js"></script>
 
-    <script src="https://rawgit.com/owidder/gapall/master/angular/js/controller/MainController.js"></script>
-    <script src="https://rawgit.com/owidder/gapall/master/angular/js/controller/picGridController.js"></script>
-    <script src="https://rawgit.com/owidder/gapall/master/angular/js/factory/util.js"></script>
+    <script src="js/controller/MainController.js"></script>
+    <script src="js/directive/cartoonImageDirective.js"></script>
+    <script src="js/controller/picGridController.js"></script>
+    <script src="js/factory/util.js"></script>
 
     <meta charset="UTF-8">
     <title>The complete Geek&Poke</title>
