--- a/angular/index.html
+++ b/angular/index.html
@@ -22,6 +22,7 @@
     <script src="js/controller/MainController.js"></script>
     <script src="js/directive/cartoonImageDirective.js"></script>
     <script src="js/controller/picGridController.js"></script>
+    <script src="js/controller/onePicController.js"></script>
     <script src="js/factory/util.js"></script>
 
     <meta charset="UTF-8">
