gapImages.js in index.html

--- a/angular/index.html
+++ b/angular/index.html
@@ -23,7 +23,9 @@
     <script src="js/directive/cartoonImageDirective.js"></script>
     <script src="js/controller/picGridController.js"></script>
     <script src="js/controller/onePicController.js"></script>
+
     <script src="js/factory/util.js"></script>
+    <script src="js/factory/gapImages.js"></script>
 
     <meta charset="UTF-8">
     <title>The complete Geek&Poke</title>
