--- a/testSVG.html
+++ b/testSVG.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-
     <link rel="stylesheet" type="text/css" href="bower_components/materialize/bin/materialize.css"
           media="screen,projection"/>
 
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
 
+    <meta charset="UTF-8">
+    <title>d3 Force Demo</title>
+
     <style>
-        .warning {
-            fill: red;
+        .bluerect {
+            fill:blue;
+            stroke:grey;
+            stroke-width:5;
+            fill-opacity:0.1;
+            stroke-opacity:0.9
         }
-
     </style>
-
 </head>
 <body>
 
-<svg height="100" width="100">
-    <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" class="warning" />
-    Sorry, your browser does not support inline SVG.
+<svg height="500" width="500">
+    <g transform="translate(100, 100)">
+        <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+        <rect class="bluerect" x="50" y="20" width="150" height="150"/>
+    </g>
 </svg>
 
 </body>
