--- a/testSVGmitJs.html
+++ b/testSVGmitJs.html
@@ -32,7 +32,7 @@
 <script>
 
     function move() {
-        var rect = d3.select("rect");
+        var rect = d3.select(".bluerect");
         var x = rect.attr("x");
 
         if(x < 1000) {
