--- a/testSVGmitJs.html
+++ b/testSVGmitJs.html
@@ -24,7 +24,7 @@
 
 <svg height="500" width="1000">
     <g transform="translate(100, 100)">
-        <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+        <circle class="node" cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
         <rect class="bluerect" x="50" y="20" width="150" height="150"/>
     </g>
 </svg>
@@ -32,11 +32,11 @@
 <script>
 
     function move() {
-        var rect = d3.select(".bluerect");
-        var x = rect.attr("x");
+        var rect = d3.select("circle.node");
+        var cx = rect.attr("cx");
 
-        if(x < 1000) {
-            rect.attr("x", Number(x)+1);
+        if(cx < 1000) {
+            rect.attr("cx", Number(cx)+1);
             window.setTimeout(move, 10);
         }
     }
