--- a/testSVGmitJs2.html
+++ b/testSVGmitJs2.html
@@ -11,7 +11,7 @@
     <title>d3 Force Demo</title>
 
     <style>
-        .bluerect {
+        circle {
             fill:blue;
             stroke:grey;
             stroke-width:5;
